--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://aurelmark.github.io/samuraji/",
   "name": "anton",
   "version": "0.1.0",
   "private": true,
